--- a/views/layout.html
+++ b/views/layout.html
@@ -32,6 +32,9 @@
       <!-- include liveReload only in Dev server -->
       <script src="//localhost:35729/livereload.js"></script>
     {%- endif %}
+    {%- if _showPages -%}
+      {% include "blocks/__pagelist.html" %}
+    {%- endif -%}
     <script src="{{ 'common.js'|js_asset }}"></script>
   </body>
 </html>
