--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -861,6 +861,34 @@ body {
     margin-left: 0%;
   }
 }
+.svg-icon {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  fill: #000;
+}
+.svg-icon__glyph {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  fill: inherit;
+}
+.svg-icon-store {
+  border: 0 !important;
+  clip: rect(0 0 0 0) !important;
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+}
 .h-clearfix:before,
 .h-clearfix:after {
   display: table;
