--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 	<section class="l-section">
 		<div class="l-container">
 		<h1>Переменные</h1>
-		{{ Macros.Icon('icon-instagram') }}
+		{{ Macros.Icon('i-instagram') }}
 		<ul>
 			<li>-- Инлайн ( на текущей странице ) => {{ locals.title }}</li>
 			<li>-- Локальная ( для текущей странице ) => {{ locals.description }}</li>
