--- a/views/macros/macro.html
+++ b/views/macros/macro.html
@@ -1,5 +1,7 @@
 {% macro Icon(id, class) %}
-	<svg xmlns="http://www.w3.org/2000/svg" role="img" class="svg-icon svg-icon--{{ id }} {{ class }}">
-		<use xlink:href="#{{ id }}"></use>
-	</svg>
+	<span class="svg-icon svg-icon--{{ id }} {{ class }}">
+		<svg xmlns="http://www.w3.org/2000/svg" class="svg-icon__glyph" role="img">
+			<use xlink:href="#{{ id }}"></use>
+		</svg>
+	</span>
 {% endmacro %}
