--- a/public/less/layout/layout.less
+++ b/public/less/layout/layout.less
@@ -1,4 +1,4 @@
-@import 'l-section';
-@import 'l-container';
-@import 'l-row';
-@import 'l-col';
+@import 'section';
+@import 'container';
+@import 'row';
+@import 'col';
