--- a/views/layout.html
+++ b/views/layout.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>{{ locals.title }}</title>
     <meta content="{{ locals.description }}" name="description">
-    <meta content="" name="keywords">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="telephone=no" name="format-detection">
+    <meta content="" name="keywords">
 
     {%- if locals.og %}
       {%- if locals.image %}
@@ -15,20 +15,27 @@
       <meta property="og:title" content="{{ locals.title }}">
       <meta property="og:description" content="{{ locals.description }}">
     {%- endif %}
-
+    {% if themeColor  %}
+      <meta name="theme-color" content="{{ themeColor }}">
+      <meta name="msapplication-navbutton-color" content="{{ themeColor }}">
+      <meta name="apple-mobile-web-app-status-bar-style" content="{{ themeColor }}">
+    {% endif %}
     <link rel="shortcut icon" href="favicon.ico">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="HandheldFriendly" content="true">
 
     <link href="{{ 'style.css'|css_asset }}" rel="stylesheet" type="text/css">
+    {% include "blocks/head_analitycs.html" %}
+    {% block head_section %}{% endblock head_section %}
   </head>
   <body>
     {% import 'macros/macro.html' as Macros %}
     {% include "blocks/svg-symbols.svg" %}
+    {% include "blocks/header.html" %}
+    <main>
     {% block content %}{% endblock content %}
-
-    
+    </main>
+    {% include "blocks/footer.html" %}
     {%- if not isExport and _env == 'development'%}
       {% include "blocks/__add_component.html" %}
       <!-- include liveReload only in Dev server -->
@@ -38,5 +45,7 @@
       {% include "blocks/__pagelist.html" %}
     {%- endif -%}
     <script src="{{ 'common.js'|js_asset }}"></script>
+    {% block footer_section %}{% endblock footer_section %}
+    {% include "blocks/analitycs.html" %}
   </body>
 </html>
