--- a/public/less/core/variables.less
+++ b/public/less/core/variables.less
@@ -1,4 +1,5 @@
 // base variables
+@system-font: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
 @base-font: 'wf_segoe-ui', Segoe UI, SegoeUI, Tahoma, Verdana, Arial, sans-serif;
 @base-font-size: 16px;
 @base-font-weight: 400;
@@ -59,7 +60,10 @@
 
 @headers-lh: 1.24;
 @headers-mb: 1.24;
+@headings-margin-bottom: .75em;
+@paragraph-margin-bottom: .75em;
+
 @h1-fz: 40px;
-@h2-fz: 40px;
-@h3-fz: 40px;
-@h4-fz: 40px;
+@h2-fz: 32px;
+@h3-fz: 24px;
+@h4-fz: 18px;
