--- a/public/less/mixins/grid-framework.less
+++ b/public/less/mixins/grid-framework.less
@@ -6,11 +6,11 @@
 .make-grid-columns() {
   // Common styles for all sizes of grid columns, widths 1-12
   .col(@index) { // initial
-    @item: ~".l-col--xs-@{index}, .l-col--sm-@{index}, .l-col--md-@{index}, .l-col--lg-@{index}";
+    @item: ~".col--xs-@{index}, .col--sm-@{index}, .col--md-@{index}, .col--lg-@{index}";
     .col((@index + 1), @item);
   }
   .col(@index, @list) when (@index =< @grid-columns) { // general; "=<" isn't a typo
-    @item: ~".l-col--xs-@{index}, .l-col--sm-@{index}, .l-col--md-@{index}, .l-col--lg-@{index}";
+    @item: ~".col--xs-@{index}, .col--sm-@{index}, .col--md-@{index}, .col--lg-@{index}";
     .col((@index + 1), ~"@{list}, @{item}");
   }
   .col(@index, @list) when (@index > @grid-columns) { // terminal
@@ -28,11 +28,11 @@
 
 .float-grid-columns(@class) {
   .col(@index) { // initial
-    @item: ~".l-col--@{class}-@{index}";
+    @item: ~".col--@{class}-@{index}";
     .col((@index + 1), @item);
   }
   .col(@index, @list) when (@index =< @grid-columns) { // general
-    @item: ~".l-col--@{class}-@{index}";
+    @item: ~".col--@{class}-@{index}";
     .col((@index + 1), ~"@{list}, @{item}");
   }
   .col(@index, @list) when (@index > @grid-columns) { // terminal
@@ -44,32 +44,32 @@
 }
 
 .calc-grid-column(@index, @class, @type) when (@type = width) and (@index > 0) {
-  .l-col--@{class}-@{index} {
+  .col--@{class}-@{index} {
     width: percentage((@index / @grid-columns));
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = push) and (@index > 0) {
-  .l-col--@{class}-push-@{index} {
+  .col--@{class}-push-@{index} {
     left: percentage((@index / @grid-columns));
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = push) and (@index = 0) {
-  .l-col--@{class}-push-0 {
+  .col--@{class}-push-0 {
     left: auto;
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = pull) and (@index > 0) {
-  .l-col--@{class}-pull-@{index} {
+  .col--@{class}-pull-@{index} {
     right: percentage((@index / @grid-columns));
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = pull) and (@index = 0) {
-  .l-col--@{class}-pull-0 {
+  .col--@{class}-pull-0 {
     right: auto;
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = offset) {
-  .l-col--@{class}-offset-@{index} {
+  .col--@{class}-offset-@{index} {
     margin-left: percentage((@index / @grid-columns));
   }
 }
