--- a/public/less/style.less
+++ b/public/less/style.less
@@ -8,6 +8,7 @@
 @import 'core/reset';
 @import 'core/defaults';
 @import 'core/fonts';
+@import 'utilites/utilites';
 
 @import 'layout/layout';
 @import 'components/components';
