--- a/public/less/core/variables.less
+++ b/public/less/core/variables.less
@@ -33,7 +33,7 @@
 @screen-md:                        992px;
 @screen-md-min:                    @screen-md;
 @screen-desktop:                   @screen-md-min;
-@screen-lg:                        1200px;
+@screen-lg:                        1330px;
 @screen-lg-min:                    @screen-lg;
 @screen-lg-desktop:                @screen-lg-min;
 @screen-xl:                        1600px;
@@ -45,14 +45,18 @@
 
 // grid settings
 @grid-columns:              12;
-@grid-gutter-width:         30px;
+@grid-gutter-width:         20px;
+@grid-outer-margin:         20px;
+@grid-gutter-compensation: -@grid-gutter-width*0.5;
+@half-gutter-width: @grid-gutter-width*0.5;
 
 @container-tablet:             (720px + @grid-gutter-width);
 @container-sm:                 @container-tablet;
 @container-desktop:            (940px + @grid-gutter-width);
 @container-md:                 @container-desktop;
-@container-large-desktop:      (1140px + @grid-gutter-width);
+@container-large-desktop:      (1280px + @grid-gutter-width);
 @container-lg:                 @container-large-desktop;
+
 
 @section-ofset:                50px;
 
