--- a/public/less/mixins/grid-framework.less
+++ b/public/less/mixins/grid-framework.less
@@ -6,70 +6,95 @@
 .make-grid-columns() {
   // Common styles for all sizes of grid columns, widths 1-12
   .col(@index) { // initial
-    @item: ~".col--xs-@{index}, .col--sm-@{index}, .col--md-@{index}, .col--lg-@{index}";
+    @item: ~".col-xs-@{index}, .col-sm-@{index}, .col-md-@{index}, .col-lg-@{index}";
     .col((@index + 1), @item);
   }
   .col(@index, @list) when (@index =< @grid-columns) { // general; "=<" isn't a typo
-    @item: ~".col--xs-@{index}, .col--sm-@{index}, .col--md-@{index}, .col--lg-@{index}";
+    @item: ~".col-xs-@{index}, .col-sm-@{index}, .col-md-@{index}, .col-lg-@{index}";
     .col((@index + 1), ~"@{list}, @{item}");
   }
   .col(@index, @list) when (@index > @grid-columns) { // terminal
     @{list} {
-      position: relative;
-      // Prevent columns from collapsing when empty
-      min-height: 1px;
-      // Inner gutter via padding
-      padding-left:  ceil((@grid-gutter-width / 2));
-      padding-right: floor((@grid-gutter-width / 2));
+      box-sizing: border-box;
+      flex: 0 0 auto;
+      padding-right: @half-gutter-width;
+      padding-left: @half-gutter-width;
     }
   }
   .col(1); // kickstart it
 }
+.grid-utilites(@class) {
+  .flex-start-@{class} {
+    justify-content: flex-start;
+    text-align: start;
+  }
 
-.float-grid-columns(@class) {
-  .col(@index) { // initial
-    @item: ~".col--@{class}-@{index}";
-    .col((@index + 1), @item);
+  .flex-center-@{class} {
+    justify-content: center;
+    text-align: center;
   }
-  .col(@index, @list) when (@index =< @grid-columns) { // general
-    @item: ~".col--@{class}-@{index}";
-    .col((@index + 1), ~"@{list}, @{item}");
+
+  .flex-end-@{class} {
+    justify-content: flex-end;
+    text-align: end;
   }
-  .col(@index, @list) when (@index > @grid-columns) { // terminal
-    @{list} {
-      float: left;
-    }
+
+  .flex-top-@{class} {
+    align-items: flex-start;
   }
-  .col(1); // kickstart it
+
+  .flex-middle-@{class} {
+    align-items: center;
+  }
+
+  .flex-bottom-@{class} {
+    align-items: flex-end;
+  }
+
+  .flex-around-@{class} {
+    justify-content: space-around;
+  }
+
+  .flex-between-@{class} {
+    justify-content: space-between;
+  }
+
+  .flex-first-@{class} {
+    order: -1;
+  }
+
+  .flex-last-@{class} {
+    order: 1;
+  }
 }
-
 .calc-grid-column(@index, @class, @type) when (@type = width) and (@index > 0) {
-  .col--@{class}-@{index} {
-    width: percentage((@index / @grid-columns));
+  .col-@{class}-@{index} {
+    flex-basis: percentage((@index / @grid-columns));
+    max-width: percentage((@index / @grid-columns));
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = push) and (@index > 0) {
-  .col--@{class}-push-@{index} {
+  .col-@{class}-push-@{index} {
     left: percentage((@index / @grid-columns));
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = push) and (@index = 0) {
-  .col--@{class}-push-0 {
+  .col-@{class}-push-0 {
     left: auto;
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = pull) and (@index > 0) {
-  .col--@{class}-pull-@{index} {
+  .col-@{class}-pull-@{index} {
     right: percentage((@index / @grid-columns));
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = pull) and (@index = 0) {
-  .col--@{class}-pull-0 {
+  .col-@{class}-pull-0 {
     right: auto;
   }
 }
 .calc-grid-column(@index, @class, @type) when (@type = offset) {
-  .col--@{class}-offset-@{index} {
+  .col-@{class}-offset-@{index} {
     margin-left: percentage((@index / @grid-columns));
   }
 }
@@ -83,9 +108,7 @@
 
 // Create grid for specific class
 .make-grid(@class) {
-  .float-grid-columns(@class);
   .loop-grid-columns(@grid-columns, @class, width);
-  .loop-grid-columns(@grid-columns, @class, pull);
-  .loop-grid-columns(@grid-columns, @class, push);
   .loop-grid-columns(@grid-columns, @class, offset);
+  .grid-utilites(@class);
 }
