--- a/public/less/mixins/grid.less
+++ b/public/less/mixins/grid.less
@@ -8,45 +8,42 @@
   margin-left: auto;
   padding-left:  floor((@gutter / 2));
   padding-right: ceil((@gutter / 2));
-  .clearfix();
 }
 
 // Creates a wrapper for a series of columns
 .make-row(@gutter: @grid-gutter-width) {
   margin-left:  ceil((@gutter / -2));
   margin-right: floor((@gutter / -2));
-  .clearfix();
+  box-sizing: border-box;
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 // Generate the extra small columns
 .make-xs-column(@columns; @gutter: @grid-gutter-width) {
-  position: relative;
-  float: left;
-  width: percentage((@columns / @grid-columns));
-  min-height: 1px;
+  flex-basis: percentage((@columns / @grid-columns));
+  max-width: percentage((@columns / @grid-columns));
   padding-left:  (@gutter / 2);
   padding-right: (@gutter / 2);
+  box-sizing: border-box;
+  flex: 0 0 auto;
 }
 .make-xs-column-offset(@columns) {
   margin-left: percentage((@columns / @grid-columns));
 }
-.make-xs-column-push(@columns) {
-  left: percentage((@columns / @grid-columns));
-}
-.make-xs-column-pull(@columns) {
-  right: percentage((@columns / @grid-columns));
-}
 
 // Generate the small columns
 .make-sm-column(@columns; @gutter: @grid-gutter-width) {
-  position: relative;
-  min-height: 1px;
+  box-sizing: border-box;
+  flex: 0 0 auto;
   padding-left:  (@gutter / 2);
   padding-right: (@gutter / 2);
 
   @media (min-width: @screen-sm-min) {
-    float: left;
-    width: percentage((@columns / @grid-columns));
+    flex-basis: percentage((@columns / @grid-columns));
+    max-width: percentage((@columns / @grid-columns));
   }
 }
 .make-sm-column-offset(@columns) {
@@ -54,27 +51,17 @@
     margin-left: percentage((@columns / @grid-columns));
   }
 }
-.make-sm-column-push(@columns) {
-  @media (min-width: @screen-sm-min) {
-    left: percentage((@columns / @grid-columns));
-  }
-}
-.make-sm-column-pull(@columns) {
-  @media (min-width: @screen-sm-min) {
-    right: percentage((@columns / @grid-columns));
-  }
-}
 
 // Generate the medium columns
 .make-md-column(@columns; @gutter: @grid-gutter-width) {
-  position: relative;
-  min-height: 1px;
+  box-sizing: border-box;
+  flex: 0 0 auto;
   padding-left:  (@gutter / 2);
   padding-right: (@gutter / 2);
 
   @media (min-width: @screen-md-min) {
-    float: left;
-    width: percentage((@columns / @grid-columns));
+    flex-basis: percentage((@columns / @grid-columns));
+    max-width: percentage((@columns / @grid-columns));
   }
 }
 .make-md-column-offset(@columns) {
@@ -82,41 +69,20 @@
     margin-left: percentage((@columns / @grid-columns));
   }
 }
-.make-md-column-push(@columns) {
-  @media (min-width: @screen-md-min) {
-    left: percentage((@columns / @grid-columns));
-  }
-}
-.make-md-column-pull(@columns) {
-  @media (min-width: @screen-md-min) {
-    right: percentage((@columns / @grid-columns));
-  }
-}
-
 // Generate the large columns
 .make-lg-column(@columns; @gutter: @grid-gutter-width) {
-  position: relative;
-  min-height: 1px;
+  box-sizing: border-box;
+  flex: 0 0 auto;
   padding-left:  (@gutter / 2);
   padding-right: (@gutter / 2);
 
   @media (min-width: @screen-lg-min) {
-    float: left;
-    width: percentage((@columns / @grid-columns));
+    flex-basis: percentage((@columns / @grid-columns));
+    max-width: percentage((@columns / @grid-columns));
   }
 }
 .make-lg-column-offset(@columns) {
   @media (min-width: @screen-lg-min) {
     margin-left: percentage((@columns / @grid-columns));
-  }
-}
-.make-lg-column-push(@columns) {
-  @media (min-width: @screen-lg-min) {
-    left: percentage((@columns / @grid-columns));
-  }
-}
-.make-lg-column-pull(@columns) {
-  @media (min-width: @screen-lg-min) {
-    right: percentage((@columns / @grid-columns));
   }
 }
