--- a/views/index.html
+++ b/views/index.html
@@ -22,18 +22,17 @@
 		<div class="container">
 			<h2 class="sr-only">Заголовок для секции только для скрин ридера</h2>
 			<div class="row">
-				<div class="col col--md-3">
+				<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
 					<div class="fixed-aspect" style="background: red"></div>
 				</div>
-				<div class="col col--md-3">
+				<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
 					<div class="fixed-aspect fixed-aspect--16by9" style="background: blue"></div>
 					
 				</div>
-				<div class="col col--md-3">
+				<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
 					<div class="fixed-aspect fixed-aspect--4by3" style="background: green"></div>
-					
 				</div>
-				<div class="col col--md-3">
+				<div class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
 					<div class="fixed-aspect fixed-aspect--2by1" style="background: gold"></div>
 				</div>
 			</div>
