--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,19 +1,12 @@
-
-// ===========
-//    core
-// ===========
-
 @import 'core/variables';
 @import 'mixins/mixins';
 @import 'core/reset';
 @import 'core/defaults';
-@import 'core/fonts';
+// @import 'core/fonts';
 @import 'utilites/utilites';
 
 @import 'layout/layout';
 @import 'components/components';
 
-// Put your code here 
-
-
+// keep it always as last one
 @import 'helpers/helpers';
