--- a/views/layout.html
+++ b/views/layout.html
@@ -24,12 +24,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="HandheldFriendly" content="true">
 
-    <link href="{{ 'style.css'|css_asset }}" rel="stylesheet" type="text/css">
+    <link href="{{ 'style.css' | resolveStyle  }}" rel="stylesheet" type="text/css">
     {% include "blocks/head_analitycs.html" %}
     {% block head_section %}{% endblock head_section %}
   </head>
   <body>
-    {% import 'macros/macro.html' as Macros %}
+    {% import 'macros/Icon.html' as Icon %}
     {% include "blocks/svg-symbols.svg" %}
     {% include "blocks/header.html" %}
     <main>
@@ -44,7 +44,7 @@
     {%- if _showPages -%}
       {% include "blocks/__pagelist.html" %}
     {%- endif -%}
-    <script src="{{ 'common.js'|js_asset }}"></script>
+    <script src="{{ 'common.js'| resolveScript }}"></script>
     {% block footer_section %}{% endblock footer_section %}
     {% include "blocks/analitycs.html" %}
   </body>
