--- a/views/index.html
+++ b/views/index.html
@@ -9,12 +9,14 @@
 	<section class="section">
 		<div class="container">
 		<h1>Переменные</h1>
-		{{ Macros.Icon('i-instagram') }}
+		{{ Icon.render('i-vk') }}
+
+		{{ '/images/test.png' | resolve }}
+		{{ '/images/test2.png' | resolveImage }}
 		<ul>
 			<li>-- Инлайн ( на текущей странице ) => {{ locals.title }}</li>
 			<li>-- Локальная ( для текущей странице ) => {{ locals.description }}</li>
 			<li>-- Глобальная ( для всех страниц ) => {{ common.data.title }}</li>
-			<img src="{{ storage ~ 'images/1.png' }}" alt="">
 		</ul>
 	</div>
 	</section>
